<resources>
    <string name="app_name">Foodie Zone</string>
    <string name="order_price">order_price</string>
    <string name="action_settings">Settings</string>
    <string name="start"> Let\'s Start </string>
    <string name="text">No matter where you are whether you are at home , or in the office , or on the beach , we will find you and we will feed you </string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="home">Home Page!!</string>
    <string name="names">Omnia | Alaa | Nour Nourhan | Amany | Habiba</string>
    <string name="name">Name :</string>
    <string name="welcome">Welcome To Our Application</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="country">Country :</string>
    <string name="log_button">Log In</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_main_activity4">MainActivity4</string>
    <string name="reg_button">Register</string>
    <string name="t1">Email :</string>
    <string name="t2">Passward :</string>
    <string name="title_activity_main_activity5">MainActivity5</string>

    <string-array name="options">
        <item>Egypt</item>
        <item>Turkey</item>
        <item>Italia</item>
    </string-array>

    <string name="title_activity_main_activity1">MainActivity1</string>
    <string name="hello_world">Hello world!</string>
</resources>