<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/photo2"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="128dp"
        android:text="@string/t2"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="a-z,A-Z,0-9@a-z.z-z"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHighlight="#E9E9E9"
        android:textColorHint="#ffffff">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="AtMost6Characters"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#E9E9E9"
        android:color="#ffffff" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/t1"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/textView2"
        android:background="#098E83"
        android:text="@string/log_button"
        android:textColor="#ffffff"
        android:textSize="25sp" />

</RelativeLayout>